--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ wagtail-content-import==0.4.2
 wagtail-image-import==0.1.0
 wagtail-transfer==0.5.1
 mammoth==1.4.10
-Wand==0.6.6
+wagtailmedia==0.7.0
 
 
 # Pinned as django-redis has incompatibility with later versions
